fix: z-index menu header, box width

--- a/src/UI/menu-list/MenuList.module.scss
+++ b/src/UI/menu-list/MenuList.module.scss
@@ -4,6 +4,7 @@
   content: '';
 
   position: absolute;
+  z-index: 10;
   top: 44px;
   right: 6px;
 
